// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`get apple pricing tier > get monthly apple tier > monthly-apple-pricing 1`] = `
{
  "country": Any<String>,
  "countryCode": Any<String>,
  "sku": Any<String>,
}
`;

exports[`get apple pricing tier > get yearly apple tier > yearly-apple-pricing 1`] = `
{
  "country": Any<String>,
  "countryCode": Any<String>,
  "discount": 50,
  "sku": Any<String>,
}
`;

exports[`get google pricing tier > get monthly google tier > monthly-google-pricing 1`] = `
{
  "country": Any<String>,
  "countryCode": Any<String>,
  "sku": Any<String>,
}
`;

exports[`get google pricing tier > get yearly google tier > yearly-google-pricing 1`] = `
{
  "country": Any<String>,
  "countryCode": Any<String>,
  "discount": 50,
  "sku": Any<String>,
}
`;

exports[`get paddle pricing tier > get monthly paddle tier > monthly-paddle-pricing 1`] = `
{
  "country": Any<String>,
  "countryCode": Any<String>,
  "sku": Any<String>,
}
`;

exports[`get paddle pricing tier > get yearly paddle tier > yearly-paddle-pricing 1`] = `
{
  "country": Any<String>,
  "countryCode": Any<String>,
  "discount": 50,
  "sku": Any<String>,
}
`;
